# The C container library is licensed under the simplified BSD license:
#
# Copyright 2013, Andrew Gottemoller
# All rights reserved.
#
# Redistribution and use in source and binary forms, with or without modification,
# are permitted provided that the following conditions are met:
#
# Redistributions of source code must retain the above copyright notice, this list of
# conditions and the following disclaimer:
#
# Redistributions in binary form must reproduce the above copyright notice, this list
# of conditions and the following disclaimer in the documentation and/or other materials
# provided with the distribution.
#
# Neither the name Andrew Gottemoller nor the names of its contributors may be used to
# endorse or promote products derived from this software without specific prior written
# permission.


AC_INIT([container], [1.0], [agottem@gmail.com])
AC_CONFIG_MACRO_DIR([m4])
AM_INIT_AUTOMAKE([foreign])
AC_PROG_CC
AC_PROG_CC_STDC
AC_DISABLE_SHARED
AC_PROG_LIBTOOL
AC_SUBST(LIBTOOL_DEPS)
AC_CONFIG_FILES([makefile source/makefile include/makefile])
AC_OUTPUT
